--- a/jenny-web/src/static/assets/css/styles.css
+++ b/jenny-web/src/static/assets/css/styles.css
@@ -18720,7 +18720,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #485a5a;
 }
 .panel {
-  margin: 0 0 20px 0;
+  margin: 0 0 0 0;
   position: relative;
   padding: 0 1px;
   background-color: #dadfe3;
