--- a/jenny-web/src/static/public/css/style.css
+++ b/jenny-web/src/static/public/css/style.css
@@ -10,31 +10,56 @@
 @import url('../fakeLoader/css/fakeLoader.css');
 @import url('../fontawesome/css/all.css');
 @import url('font-awesome.css');
-
 table a.btn {
 	font-weight: 900;
 }
+
 .static-content-tab {
 	padding: 0;
 }
+
 .tab-title {
 	width: 100%;
-    position: fixed;
-    border-bottom: 1px solid #dadfe3;
-    background-color: #bab3c1;
+	position: fixed;
+	border-bottom: 1px solid #dadfe3;
+	background-color: #bab3c1;
 }
+
 .static-content-tab .tab-content {
 	padding-top: 35px;
 }
+
 .table>tbody>tr>td>a {
 	padding: 0 5px;
 }
-.table>tbody>tr>td>a:link, .table>tbody>tr>td>a:hover {
-	text-decoration:none;
+
+.table>tbody>tr>td>a:link,
+.table>tbody>tr>td>a:hover {
+	text-decoration: none;
 }
+
 .table {
 	font-size: 0.9em;
+	table-layout: fixed;
 }
+
+td {
+	width: 100%;
+	word-break: keep-all;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	-icab-text-overflow: ellipsis;
+	-khtml-text-overflow: ellipsis;
+	-moz-text-overflow: ellipsis;
+	-webkit-text-overflow: ellipsis;
+}
+
 .fixed-table-toolbar .btn-group .btn {
-	font-weight: 900; 
+	font-weight: 900;
+}
+
+.margin0 {
+	margin: 0;
 }
