用户信息和用户设置页面

--- a/jenny-web/src/static/assets/css/styles.css
+++ b/jenny-web/src/static/assets/css/styles.css
@@ -22047,8 +22047,8 @@ a.shortcut-tiles {
 }
 .panel-profile .avatar {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: auto;
 }
 .panel-profile .table-responsive {
   border: 0;
