服务监控功能

--- a/jenny-web/src/static/public/css/style.css
+++ b/jenny-web/src/static/public/css/style.css
@@ -71,3 +71,15 @@ table a.btn {
 	float: right;
     margin-right: 10px;
 }
+.menu-title:focus {
+	text-decoration: none;
+}
+.menu-title:hover {
+	text-decoration: none;
+}
+.menu-title:visited {
+	text-decoration: none;
+}
+.menu-title:active {
+	text-decoration: none;
+}
